SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/Account_Payable_Item_Clone__c.object-meta.xml
<CustomObject>
    <description>Line Items for Invoice (AP)</description>
    <label>Invoice Line (AP)</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines (AP)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>