SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>API - {000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>