SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP1</relationshipName>
    <type>Lookup</type>
</CustomField>