SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP</relationshipName>
    <type>Lookup</type>
</CustomField>