SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Cash_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Cash_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Disbursement</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP</relationshipName>
    <type>Lookup</type>
</CustomField>