SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line</label>
    <referenceTo>Contract_Item__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP1</relationshipName>
    <type>Lookup</type>
</CustomField>