SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP</relationshipName>
    <type>Lookup</type>
</CustomField>