SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP</relationshipName>
    <type>Lookup</type>
</CustomField>