SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Liability_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Liability_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Invoice Lines (AP) (Liability GL Account)</relationshipLabel>
    <relationshipName>Invoice_Lines_AP1</relationshipName>
    <type>Lookup</type>
</CustomField>