SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>