SubBt/force-app/main/default/objects/Account_Payable_Item_Clone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Payable_Clone__c</columns>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Tax__c</columns>
    <columns>Total_Amount_With_Tax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>